correcciones validación autocomplete subcuenta

--- a/view/admin_empresa.html
+++ b/view/admin_empresa.html
@@ -699,6 +699,8 @@
                                     <i class="fa fa-balance-scale" aria-hidden="true"></i>
                                  </span>
                                  <input type="text" name="codsubcuenta" value="{$value->codsubcuenta}" class="form-control" maxlength="15" placeholder="subcuenta" autocomplete="off"/>
+                                 <!-- Campo oculto para validacion del autocomplete  -->
+                                 <input type="hidden" name="validarsubcuenta" value="0">
                               </div>
                               <p class="help-block">
                                  Subcuenta asociada para esta cuenta bancaria.
@@ -793,6 +795,8 @@
                         <i class="fa fa-balance-scale" aria-hidden="true"></i>
                      </span>
                      <input type="text" name="codsubcuenta" class="form-control" maxlength="15" placeholder="subcuenta" autocomplete="off"/>
+                     <!-- Campo oculto para validacion del autocomplete  -->
+                     <input type="hidden" name="validarsubcuenta" value="0">
                   </div>
                   <p class="help-block">
                      Subcuenta asociada para esta cuenta bancaria.
@@ -818,12 +822,22 @@
            paramName: 'subcuenta',
            onSelect: function (data){
                $(this).val(data.data);
+               $('input[name="validarsubcuenta"]').val('1');
            }
       });
    });
 // Validar que se leccione una subcuenta
    $('input[name="codsubcuenta"]').on("keydown", function(e) {
-      if(e.keyCode == 8 || e.keyCode == 46) {
+      if ($('input[name="validarsubcuenta"]').val() == '1' ) {
+         if(e.keyCode == 8 || e.keyCode == 46) {
+            $('input[name="codsubcuenta"]').val('');
+            $('input[name="validarsubcuenta"]').val('0');
+         }
+      }
+   });
+// Validar que se leccione una subcuenta
+   $('input[name="codsubcuenta"]').blur(function() { 
+      if ($('input[name="validarsubcuenta"]').val() == '0' ) {
          $('input[name="codsubcuenta"]').val('');
       }
    });
